solved height overflow issue

--- a/app/assets/stylesheets/sdbmss.css
+++ b/app/assets/stylesheets/sdbmss.css
@@ -47,7 +47,7 @@ textarea { resize:vertical ; }
 }
 .main-content-wrapper {
   width: 100%;
-  height: 100vh;
+  height: calc(100vh - 50px);
   vertical-align: top;
   display: table-cell;
 }
@@ -1715,7 +1715,8 @@ so that gray backdrop shvows up correctly */
   display: block;
   display: table-cell;
   box-shadow: 0px 0px 14px #ccc;
-  z-index: 100;;
+  z-index: 100;
+  height: calc(100vh - 50px);
 }
 #control-panel > .collapsing {
   height: auto;
